--- a/providers/pcep/pom.xml
+++ b/providers/pcep/pom.xml
@@ -29,5 +29,7 @@
         <module>tunnel</module>
         <module>app</module>
         <module>packet</module>
+        <module>cfg</module>
+        <module>cli</module>
   </modules>
 </project>
