vn web code changes: client and server side changes with stub

--- a/apps/virtualnetwork/pom.xml
+++ b/apps/virtualnetwork/pom.xml
@@ -32,6 +32,7 @@
 
     <modules>
         <module>app</module>
+        <module>vnweb</module>
     </modules>
     <dependencies>
        <dependency>
