--- a/apps/pcc/app/pom.xml
+++ b/apps/pcc/app/pom.xml
@@ -137,5 +137,10 @@
            <artifactId>onos-app-pcep-api</artifactId>
            <version>1.7.0-SNAPSHOT</version>
        </dependency>
-    </dependencies>
+       <dependency>
+           <groupId>org.onosproject</groupId>
+           <artifactId>onos-app-pce</artifactId>
+           <version>1.7.0-SNAPSHOT</version>
+       </dependency>
+   </dependencies>
 </project>
