--- a/providers/bgp/topology/pom.xml
+++ b/providers/bgp/topology/pom.xml
@@ -29,5 +29,10 @@
                         <groupId>org.onosproject</groupId>
                         <artifactId>onos-bgp-api</artifactId>
                 </dependency>
+            <dependency>
+                <groupId>org.onosproject</groupId>
+                <artifactId>onos-app-pcep-api</artifactId>
+            </dependency>
         </dependencies>
+
 </project>
